# FoundryAI-capstone

./: .gitignore  .terraform.lock.hcl  Dockerfile  Dockerfile.consumer  Dockerfile.kafka-connect  Dockerfile.producer  README.md  README2.md  consumer.py  docker-compose.yaml  historical_rates.json  install_n_start_docker.md  json_to_csv.py  m02__test.md  main.py  manual_pdf_rag_chatbot.py  pdf_loader_and_text_chunker.py  pdf_rag_demo.db  pdf_utils.py  producer.py  pyproject.toml  secret.env  simple_chat.py  snowflake.tf  snowflake_pdf.py  terraform.tfstate  terraform.tfstate.backup  test_snowflake.py
.github/: copilot-instructions.md
.github/workflows/: dbt-ci.yml  dbt_ci.yml
dags/: forex_crypto.py  test.py
dbt-capstone/models/marts/: mart_exchange_rates.sql  mart_exchange_rates.yml
dbt-capstone/models/staging/: sources.yml  stg_exchange_rates.sql  stg_exchange_rates.yml
dbt-dag/: Dockerfile  requirements.txt
dbt-dag/dags/: Ingest_API.py  Ingest_csv.py  currency.csv  dbt_dag.py  historical_rates.csv  ml_dag.py  ml_volatility_classifier.py
dbt_capstone_project/: dbt_project.yml
dbt_capstone_project/models/: schema.yml
dbt_capstone_project/models/01_staging/: exchange_rates.sql  sources.yml
dbt_capstone_project/models/02_intermediate/: clean_exchange_rate.sql
dbt_capstone_project/models/03_marts/: exchange_metrics.sql
dbt_dag/: Dockerfile  requirements.txt
dbt_dag/.astro/: docker-compose.override.yml
dbt_dag/dags/: dbt_dag.py  ml_dag.py
dbt_dag/dags/dbt_capstone_project/: dbt_project.yml
docs/: proposal.md
(+21 files in other folders)
